--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ main {
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 100vh;
+    min-height: 1029px;
 }
 
 .bento-grid {
@@ -43,7 +43,7 @@ main {
 
 .bento-grid__title {
     color: var(--black);
-    font-weight: 600;
+    font-weight: 500;
     font-size: 1.9rem;
     line-height: .8;
     letter-spacing: -2px;
@@ -87,7 +87,7 @@ main {
    margin: 1rem 0;
 }
 
-.bento-grid__social-media-star-content img {
+.bento-grid__social-media-star-content .bento-grid__image {
     width: 187px;
 }
 
@@ -100,7 +100,7 @@ main {
     min-height: 247px;
 }
 
-.bento-grid__multiple-platforms img {
+.bento-grid__multiple-platforms .bento-grid__image {
     width: 17rem;
     margin-bottom: 1rem;
 }
@@ -113,7 +113,7 @@ main {
     min-height: 247px;
 }
 
-.bento-grid__consistent-schedule img {
+.bento-grid__consistent-schedule .bento-grid__image {
     position: absolute;
     margin-top: 1rem;
     width: calc(100% - 3rem);
@@ -130,7 +130,7 @@ main {
 }
 
 
-.bento-grid__schedule-posts img {
+.bento-grid__schedule-posts .bento-grid__image {
     width: 20rem;
     margin: 1rem 0;
 }
@@ -148,10 +148,9 @@ main {
 .bento-grid__grow-followers .bento-grid__title {
     letter-spacing: .5px;
     line-height: .9;
-    font-weight: 400;
 }
 
-.bento-grid__grow-followers img {
+.bento-grid__grow-followers .bento-grid__image {
     width: 12rem;
     margin-right: .5rem;
 }
@@ -166,7 +165,7 @@ main {
     min-height: 247px;
 }
 
-.bento-grid__audience-growth img {
+.bento-grid__audience-growth .bento-grid__image {
     width: 10rem;
 }
 
@@ -194,7 +193,7 @@ main {
     color: var(--purple-500);
 }
 
-.bento-grid__create-post-img-container img {
+.bento-grid__create-post-image-container .bento-grid__image {
     width: 100%;
 }
 
@@ -213,7 +212,7 @@ main {
     padding: 0 1rem 0 0;
 }
 
-.bento-grid__ai-content img {
+.bento-grid__ai-content .bento-grid__image {
     width: 12rem;
 }
 
@@ -255,7 +254,7 @@ main {
         min-height: initial;
     }
 
-    .bento-grid__multiple-platforms img {
+    .bento-grid__multiple-platforms .bento-grid__image {
         width: 100%;
     }
 
@@ -314,7 +313,7 @@ main {
         min-height: 218px;
     }
 
-    .bento-grid__consistent-schedule img {
+    .bento-grid__consistent-schedule .bento-grid__image {
         width: 60%;
         left: 1.5rem;
     }
@@ -332,7 +331,7 @@ main {
         padding: 1rem 0;
     }
 
-    .bento-grid__schedule-posts img {
+    .bento-grid__schedule-posts .bento-grid__image {
         width: 100%;
     }
 
@@ -344,7 +343,7 @@ main {
         padding: 2rem 3rem;
     }
 
-    .bento-grid__grow-followers img {
+    .bento-grid__grow-followers .bento-grid__image {
         width: calc(100% - 2rem);
     }
 
@@ -361,7 +360,7 @@ main {
         gap: 1.5rem;
     }
 
-    .bento-grid__create-post-img-container {
+    .bento-grid__create-post-.bento-grid__image-container {
         width: 12rem;
     }
 
@@ -376,9 +375,7 @@ main {
         padding: 0 2rem 0 0;
     }
 
-    .bento-grid__ai-content img {
+    .bento-grid__ai-content .bento-grid__image {
         width: 14rem;
     }
-
-    
 }
